# akeymap

./: CMakeLists.txt  README.md
clients/akeymap/: CMakeLists.txt  akeymap.cpp  akeymap.exe.lnk  akeymap.h  akeymap.lnk  buildit.cmd  sources
clients/akeymap/vs/akeymap/: akeymap.sln
clients/akeymap/vs/akeymap/akeymap/: akeymap.vcxproj  akeymap.vcxproj.filters
clients/capsicain/: CMakeLists.txt  buildit.cmd  capsicain.cpp  capsicain.h  capsicain.lnk  capsicain.rc  sources
clients/capsicain/vs/capsicain/: capsicain.sln
clients/capsicain/vs/capsicain/capsicain/: capsicain.vcxproj  capsicain.vcxproj.filters
clients/vs/akeymap/: akeymap.sln
clients/vs/akeymap/akeymap/: akeymap.vcxproj  akeymap.vcxproj.filters
samples/hardwareid/: buildit.cmd
